--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,40 +2,45 @@
   // Use IntelliSense to learn about possible Node.js debug attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  // ${fileBasenameNoExtension}
   "version": "0.2.0",
   "configurations": [
       {
         "type": "node",
         "request": "launch",
-        "name": "Debug file",
+        "name": "Debug Current File",
         "program": "${workspaceRoot}/lib/${fileBasenameNoExtension}.js",
         "cwd": "${workspaceRoot}",
         "sourceMaps": true,
         "smartStep": true,
-        "preLaunchTask": "build",
+        "preLaunchTask": "npm: bldelectron",
         "outFiles": [
           "${workspaceRoot}/lib/*.js"
         ]
       },
       {
-      "type": "node",
-      "request": "launch",
-      "name": "Run Jest Tests",
-      "cwd": "${workspaceFolder}",
-      "args": [
-        "--inspect-brk",
-        "${workspaceRoot}/node_modules/.bin/jest",
-        "--runInBand"
-      ],
-      "windows": {
-        "args": [
-          "--inspect-brk",
-          "${workspaceRoot}/node_modules/jest/bin/jest.js",
-          "--runInBand"
+        "type": "node",
+        "request": "launch",
+        "name": "Electron: Main",
+        "preLaunchTask": "npm: bldelectron",
+        "protocol": "inspector",
+        "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
+        "runtimeArgs": [
+            "--remote-debugging-port=9223",
+            "."
         ],
-      },
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen"
+        "windows": {
+            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+        }
+    },
+    {
+        "name": "Electron: Renderer",
+        "type": "chrome",
+        "request": "attach",
+        "port": 9223,
+        "preLaunchTask": "npm: bldelectron",
+        "webRoot": "${workspaceFolder}",
+        "timeout": 30000
     },
     {
       "name": "Launch Chrome against localhost",
@@ -65,5 +70,14 @@
       ]
                
   }    
-  ]
+  ],
+  "compounds": [
+    {
+        "name": "Electron: All",
+        "configurations": [
+            "Electron: Main",
+            "Electron: Renderer"
+        ]
+    }
+]  
 }
