--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,7 @@
             "--remote-debugging-port=9223",
             "."
         ],
+        "env": {"NODE_ENV" : "development"},
         "windows": {
             "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
         }
@@ -38,8 +39,7 @@
         "type": "chrome",
         "request": "attach",
         "port": 9223,
-        "preLaunchTask": "npm: bldelectron",
-        "webRoot": "${workspaceFolder}",
+         "webRoot": "${workspaceFolder}",
         "timeout": 30000
     },
     {
