--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mdns",
   "version": "1.2.3",
+  "productName": "Mdns app",
   "description": "Mdns graphic viewer",
   "main": "lib/app.js",
   "license": "MIT",
@@ -23,6 +24,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "start": "electron .",
+    "main": "app.js",
     "clean": "rimraf lib && rimraf coverage",
     "format": "prettier --write \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
@@ -38,7 +40,12 @@
     "postbuild": "",
     "updatedistandlib": "copyfiles -u 1 -V \"./html/*\" \"./lib/*.js\" ./dist/ && copyfiles -u 2 -V \"./html/asset/*\" ./dist/ && copyfiles -u 1 -V \"./html/*\" ./lib/ && copyfiles -u 2 -V \"./html/asset/*\" ./lib/",
     "build-jsdocs": "jsdoc src -r -c jsdocconfig.json -d docs",
-    "build-docs": "typedoc --options tsdocconfig.json --out docs src"
+    "build-docs": "typedoc --options tsdocconfig.json --out docs src",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=asset/icon/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . Mdns-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=asset/icon/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Mdns App\"",
+    "package-linux": "electron-packager . mdns-app --overwrite --asar=true --platform=linux --arch=x64 --icon=asset/icon/png/1024x1024.png --prune=true --out=release-builds",
+    "create-installer-mac": "electron-installer-dmg ./release-builds/Electron\\ tutorial\\ app-darwin-x64/Electron\\ tutorial\\ app.app electron-tutorial-app --out=release-builds --overwrite --icon=asset/icon/mac/icon.icns",
+    "create-installer-win": "node installer/win/createinstaller.js"
   },
   "dependencies": {
     "bonjour": "^3.5.0",
@@ -55,6 +62,8 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.12.2",
     "coveralls": "^3.0.3",
+    "electron-packager": "^13.1.1",
+    "electron-winstaller": "^3.0.4",
     "http-server": "^0.11.1",
     "jest": "^24.5.0",
     "jest-environment-node-debug": "^2.0.0",
